--- a/locale/en/WhereIsMyBody.cfg
+++ b/locale/en/WhereIsMyBody.cfg
@@ -3,7 +3,7 @@
 [mod-name]
 m_WhereIsMyBody=Where Is My Body
 [mod-description]
-m_WhereIsMyBody=Draws lines to your corpses. The mod is optimized and customizable./n/nAuthor: darkfrei. Modified by ZwerOxotnik
+m_WhereIsMyBody=This mod draw lines to your corpses. The mod is optimized and customizable./n/nAuthor: darkfrei. Modified by ZwerOxotnik
 
 [mod-setting-name]
 WHMB_update_tick=Update tick
