Update translations from Crowdin

--- a/locale/ru/WhereIsMyBody.cfg
+++ b/locale/ru/WhereIsMyBody.cfg
@@ -1,4 +1,6 @@
 
+[mod-name]
+m_WhereIsMyBody=Где мое тело
 [mod-description]
 m_WhereIsMyBody=Рисует линии к вашим трупам. Мод оптмизирован и настраиваем./n/nАвтор: darkfrei. Модифицировано ZwerOxotnik'ом
 
