--- a/locale/en/WhereIsMyBody.cfg
+++ b/locale/en/WhereIsMyBody.cfg
@@ -8,3 +8,4 @@ m_WhereIsMyBody=This mod draw lines to your corpses. The mod is optimized and cu
 [mod-setting-name]
 WHMB_update_tick=Update tick
 WHMB_create_lines=Create lines
+WHMB_line_width=Line width
