--- a/locale/en/WhereIsMyBody.cfg
+++ b/locale/en/WhereIsMyBody.cfg
@@ -9,3 +9,4 @@ m_WhereIsMyBody=This mod draw lines to your corpses. The mod is optimized and cu
 WHMB_update_tick=Update tick
 WHMB_create_lines=Create lines
 WHMB_line_width=Line width
+WHMB_ignore_if_less_n_items=Ignore your body if it has <=N items
