--- a/locale/en/WhereIsMyBody.cfg
+++ b/locale/en/WhereIsMyBody.cfg
@@ -3,10 +3,11 @@
 [mod-name]
 m_WhereIsMyBody=Where Is My Body
 [mod-description]
-m_WhereIsMyBody=This mod draw lines to your corpses. The mod is optimized and customizable./n/nAuthor: darkfrei. Modified by ZwerOxotnik
+m_WhereIsMyBody=This mod draw lines to your corpses. The mod is optimized and customizable./n/nInitially, "darkfrei" made such mod. This mod fully rewritten from scratch with new features.
 
 [mod-setting-name]
 WHMB_update_tick=Update tick
 WHMB_create_lines=Create lines
 WHMB_line_width=Line width
 WHMB_ignore_if_less_n_items=Ignore your body if it has <=N items
+WHMB_delete_empty_bodies=Delete empty bodies
