--- a/locale/ru/WhereIsMyBody.cfg
+++ b/locale/ru/WhereIsMyBody.cfg
@@ -2,11 +2,12 @@
 [mod-name]
 m_WhereIsMyBody=Где мое тело
 [mod-description]
-m_WhereIsMyBody=Рисует линии к вашим трупам. Мод оптмизирован и настраиваем./n/nАвтор: darkfrei. Модифицировано ZwerOxotnik'ом
+m_WhereIsMyBody=Рисует линии к вашим трупам. Мод оптмизирован и настраиваем./n/nИзначально, "darkfrei" сделал такой мод. Этот мод полностью переписан с нуля с новыми функциями.
 
 [mod-setting-name]
 WHMB_update_tick=Тик обновления
 WHMB_create_lines=Создавать линии
 WHMB_line_width=Ширина линии
 WHMB_ignore_if_less_n_items=Игнорировать ваше тело, если имеет <=N предметов
+WHMB_delete_empty_bodies=Удалять пустые тела
 
