--- a/locale/en/WhereIsMyBody.cfg
+++ b/locale/en/WhereIsMyBody.cfg
@@ -11,3 +11,4 @@ WHMB_create_lines=Create lines
 WHMB_line_width=Line width
 WHMB_ignore_if_less_n_items=Ignore your body if it has <=N items
 WHMB_delete_empty_bodies=Delete empty bodies
+WHMB_create_chart_tags_after_death=Create a chart tag after death
