--- a/locale/ru/WhereIsMyBody.cfg
+++ b/locale/ru/WhereIsMyBody.cfg
@@ -10,4 +10,5 @@ WHMB_create_lines=Создавать линии
 WHMB_line_width=Ширина линии
 WHMB_ignore_if_less_n_items=Игнорировать ваше тело, если имеет <=N предметов
 WHMB_delete_empty_bodies=Удалять пустые тела
+WHMB_create_chart_tags_after_death=Создать метку на карте после смерти
 
