--- a/Source/locale/en/WhereIsMyBody.cfg
+++ b/Source/locale/en/WhereIsMyBody.cfg
@@ -2,13 +2,14 @@
 
 [mod-name]
 m_WhereIsMyBody=Where Is My Body
+
 [mod-description]
-m_WhereIsMyBody=This mod draw lines to your corpses. The mod is optimized and customizable./n/nInitially, "darkfrei" made such mod. This mod fully rewritten from scratch with new features.
+m_WhereIsMyBody=A mod that displays a line pointing towards your corpse.\nThe mod is optimized and customizable./n/nBased on the idea of darkfrei's mod, but written from scratch.
 
 [mod-setting-name]
-WHMB_update_tick=Update tick
-WHMB_create_lines=Create lines
-WHMB_line_width=Line width
+WHMB_update_tick=Update Tick
+WHMB_create_lines=Create Lines
+WHMB_line_width=Line Width
 WHMB_ignore_if_less_n_items=Ignore your body if it has <=N items
 WHMB_delete_empty_bodies=Delete empty bodies
 WHMB_create_chart_tags_after_death=Create a chart tag after death
