--- a/.github/workflows/autoPublish.yml
+++ b/.github/workflows/autoPublish.yml
@@ -3,7 +3,7 @@ name: Auto publish
 on:
   push:
     paths:
-      - 'info.json' # Triggers only if the mod info file is updated
+      - 'Source/info.json' # Triggers only if the mod info file is updated
     branches:
       - main
 
@@ -11,30 +11,36 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout repository and submodules
       uses: actions/checkout@v2
       with:
         submodules: recursive
+
     - name: get version
       id: version
       uses: notiz-dev/github-action-json-property@release
       with:
-        path: 'info.json'
+        path: 'Source/info.json'
         prop_path: 'version'
+
     - name: get factorio_version
       id: factorio_version
       uses: notiz-dev/github-action-json-property@release
       with:
-        path: 'info.json'
+        path: 'Source/info.json'
         prop_path: 'factorio_version'
+
     - name: get mod name
       id: mod_name
       uses: notiz-dev/github-action-json-property@release
       with:
-        path: 'info.json'
+        path: 'Source/info.json'
         prop_path: 'name'
+
     - name: Zip mod
       run: bash ./.scripts/zip_mod.sh
+
     - uses: marvinpinto/action-automatic-releases@latest
       id: aar
       with:
@@ -44,6 +50,7 @@ jobs:
         prerelease: false
         files: |
           ./${{steps.mod_name.outputs.prop}}_${{steps.version.outputs.prop}}.zip
+
     - uses: TGNThump/factorio-publish-mod-action@v1
       with:
         mod_portal_username: ${{ secrets.FACTORIO_USER }}
