Update translations from Crowdin

--- a/locale/uk/WhereIsMyBody.cfg
+++ b/locale/uk/WhereIsMyBody.cfg
@@ -2,9 +2,14 @@
 [mod-name]
 m_WhereIsMyBody=Де моє тіло
 [mod-description]
+m_WhereIsMyBody=Цей мод малює лінії до ваших трупів. Мод оптимізований і налаштовується./n/nПочатково такий мод зробив "darkfrei". Цей мод повністю переписаний з нуля з новими можливостями.
 
 [mod-setting-name]
 WHMB_update_tick=Тік оновлення
 WHMB_create_lines=Створити лінії
+WHMB_line_width=Ширина лінії
+WHMB_ignore_if_less_n_items=Ігнорувати тіло, якщо воно містить <=N елементів
+WHMB_delete_empty_bodies=Видалення порожніх тіл
+WHMB_create_chart_tags_after_death=Створення тегу діаграми після смерті
 
 
