Update translations from Crowdin

--- a/locale/ru/WhereIsMyBody.cfg
+++ b/locale/ru/WhereIsMyBody.cfg
@@ -2,9 +2,14 @@
 [mod-name]
 m_WhereIsMyBody=Где мое тело
 [mod-description]
+m_WhereIsMyBody=Этот мод проводит линии к вашим трупам. Мод оптимизирован и настраивается./n/nИзначально такой мод сделал "darkfrei". Этот мод полностью переписан с нуля с новыми возможностями.
 
 [mod-setting-name]
 WHMB_update_tick=Тик обновления
 WHMB_create_lines=Создавать линии
+WHMB_line_width=Ширина линии
+WHMB_ignore_if_less_n_items=Игнорировать тело, если в нем <=N элементов
+WHMB_delete_empty_bodies=Удаление пустых тел
+WHMB_create_chart_tags_after_death=Создать тег диаграммы после смерти
 
 
