Update translations from Crowdin

--- a/locale/de/WhereIsMyBody.cfg
+++ b/locale/de/WhereIsMyBody.cfg
@@ -2,8 +2,7 @@
 [mod-name]
 m_WhereIsMyBody=Wo ist meine Leiche
 [mod-description]
-m_WhereIsMyBody="Diese Mod zeichnet Linien zu deinen Leichen. Die Mod ist optimiert und anpassbar./n/nUrsprünglich machte \"darkfrei\" eine solche Mod.
-Diese Mod wurde komplett neu geschrieben, mit neuen Features."=
+m_WhereIsMyBody=Diese Mod zeichnet Linien zu deinen Leichen. Die Mod ist optimiert und anpassbar./n/nUrsprünglich machte "darkfrei" eine solche Mod. Diese Mod wurde komplett neu geschrieben, mit neuen Features.
 
 [mod-setting-name]
 WHMB_create_lines=Linien erstellen
