Update translations from Crowdin

--- a/locale/fr/WhereIsMyBody.cfg
+++ b/locale/fr/WhereIsMyBody.cfg
@@ -1,7 +1,15 @@
 
+[mod-name]
+m_WhereIsMyBody=Où Est Mon Cadavre? (Where Is My Body)
 [mod-description]
+m_WhereIsMyBody=Ce mod dessine un chemin vers vos cadavres. Ce mod est optimisé et personnalisable. Initialement codé par "darkfrei", le mod a été réécrit en entier avec de nouvelles fonctionnalités.
 
 [mod-setting-name]
-WHMB_update_tick=Mise à jour du tick
+WHMB_update_tick=Tick de mise à jour
+WHMB_create_lines=Créer des lignes
+WHMB_line_width=Largeur des lignes
+WHMB_ignore_if_less_n_items=Ignorer le cadavre s'il contient moins de N objets
+WHMB_delete_empty_bodies=Supprimer les cadavres vides
+WHMB_create_chart_tags_after_death=Créer une étiquette de graphe après une mort
 
 
