Update translations from Crowdin

--- a/locale/nl/WhereIsMyBody.cfg
+++ b/locale/nl/WhereIsMyBody.cfg
@@ -2,7 +2,14 @@
 [mod-name]
 m_WhereIsMyBody=Waar is mijn lichaam
 [mod-description]
+m_WhereIsMyBody=Deze mod tekent lijnen naar je lichamen. De mod is geoptimaliseerd en aanpasbaar. n/nAanvankelijk heeft "darkfrei" een dergelijke mod gemaakt. Deze mod is volledig herschreven vanaf nul met nieuwe functies.
 
 [mod-setting-name]
+WHMB_update_tick=Update tick
+WHMB_create_lines=Maakt lijnen
+WHMB_line_width=Lijndikte
+WHMB_ignore_if_less_n_items=Negeer je lichaam als het <=N items heeft
+WHMB_delete_empty_bodies=Verwijder lege lichamen
+WHMB_create_chart_tags_after_death=Maak een grafiek tag na de dood
 
 
